swaggerでuserの残り追加
